# spec-orch

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PLANNING.md  README.md  README.zh.md  VISION.md  VISION.zh.md  compliance.contracts.yaml  findings.md  gate.policy.yaml  progress.md  pyproject.toml  spec-orch.toml  task_plan.md
.github/workflows/: ci.yml  release.yml
.spec_orch/: preflight.json  reactions.example.yaml
.spec_orch/acceptance/: dashboard_ui_acceptance.json  dashboard_ui_acceptance.md  issue_start_smoke.json  issue_start_smoke.md  stability_acceptance_status.json
.spec_orch/skills/: example-gate-check.yaml  workflow-replay-e2e.yaml
.spec_orch_evolution/: run_counter.json
docs/acceptance-history/: README.md  index.json
docs/adr/: 0001-memory-architecture.md  template.md
docs/agent-guides/: run-pipeline.md  services.md  setup.md  troubleshooting.md
docs/architecture/: 2026-03-19-directional-review.md  2026-03-19-directional-review.zh.md  2026-03-30-contract-core-surface-audit.md  2026-03-30-runtime-core-boundary-audit.md  architecture-recovery.md  change-management-policy.md  context-contract-design.md  core-extraction-migration-matrix.md  evolution-trigger-architecture.md  execution-decomposition.md  execution-outcome-artifact-mapping.md  linear-api-surface.md  object-boundaries.md  observability-v1-design.md  orchestration-brain-design.md  orchestration-plane-options-and-mvp.md  pipeline-roles-and-stages.md  pipeline-roles-and-stages.zh.md  runtime-glossary.md  sdd-landscape-and-positioning.md  seven-planes.md  shared-execution-semantics.md  skill-driven-vs-spec-driven.md  spec-contract-integration.md  spec-orch-system-design-v0.md  system-primitives-and-high-level-organization.md  trust-boundaries.md
docs/guides/: Untitled  ai-config-guide.md  eodf-acpx-guide.md  operator-console.md  supervised-mission-e2e-playbook.md
docs/plans/: 2026-03-07-spec-orch-v1-implementation.md  2026-03-08-p0-alpha-dogfood-plan.md  2026-03-08-p0-alpha-issue-backlog.md  2026-03-10-competitive-analysis-and-roadmap.md  2026-03-11-eodf-development-flow-design.md  2026-03-11-findings-cli-command.md  2026-03-11-review-fixes-batch.md  2026-03-18-overall-status-and-roadmap.md  2026-03-25-mission-supervisor-round-loop-implementation.md  2026-03-25-operator-console-design.md  2026-03-25-operator-console-implementation-plan.md  2026-03-25-supervisor-context-mission-execution-visual-evaluator.md  2026-03-26-operator-console-next-todos.md  2026-03-27-acceptance-evaluator-playwright-linear.md  2026-03-27-dashboard-mission-launcher.md  2026-03-28-acceptance-prompt-architecture.md  2026-03-28-acceptance-taxonomy-and-epics.md  2026-03-28-dashboard-workflow-acceptance-judgment.md  2026-03-28-fresh-acpx-mission-e2e-design.md  2026-03-28-fresh-acpx-mission-e2e-implementation.md  2026-03-28-spec-orch-vs-yoyo-evolve-roadmap.md  2026-03-28-workflow-acceptance-implementation.md  2026-03-28-workflow-replay-e2e-skill-contract.md  2026-03-29-acceptance-integrated-program-rebaseline.md  2026-03-29-acceptance-judgment-and-core-extraction-alignment.md  2026-03-29-acceptance-judgment-linear-integration.md  2026-03-29-codexharness-retention-and-migration.md  2026-03-29-execution-horizon-tranches.md  2026-03-29-first-week-implementation-tranches.md  2026-03-29-fresh-acpx-hardening-implementation.md  2026-03-29-full-epic-and-issue-breakdown.md  2026-03-29-linear-ready-epic-mapping.md  2026-03-29-runtime-extraction-phase-2.md  2026-03-29-shared-execution-semantics-rollout.md  2026-03-29-son-264-exploratory-acceptance-implementation.md  2026-03-29-son-264-runtime-responsibility-split.md  2026-03-29-son-265-dashboard-critique-rubric-design.md  2026-03-29-son-265-dashboard-critique-rubric-implementation.md  2026-03-29-system-primitives-implementation-track.md  2026-03-29-tranche-a-execution-pack.md  (+72 more)
docs/reference/: spec-orch-toml.md
docs/research/: acpx-acp-analysis.md
docs/reviews/: 2026-03-08-spec-orch-review.md  2026-03-20-architecture-deep-review.md
fixtures/issues/: BOOT-E2E.json  SPC-1.json  SPC-BOOT-1.json  SPC-BOOT-2.json  SPC-BOOT-3.json  SPC-D1.json  SPC-EODF-DRY.json  SPC-FINDINGS-1.json  SPC-P0-1.json  SPC-P0-2.json  SPC-P0-3.json  SPC-P1-1.json  SPC-PTS-1.json  SPC-REVIEW-1.json  SPC-UX-1.json  SPC-UX-2.json
homebrew/: spec-orch.rb
openspec/: README.md  review-notes.md
openspec/contracts/: T3.3-gate-promotion-required.md
src/spec_orch/: __init__.py  cli.py  dashboard.py  flow_mapping.yaml
tests/: __init__.py  conftest.py
tests/e2e/: _shared_env.sh  bootstrap_test.sh  dashboard_ui_acceptance.sh  exploratory_acceptance_smoke.sh  fresh_acpx_mission_smoke.sh  issue_start_smoke.sh  mission_start_acceptance.sh  supervised_mission_minimax.sh  update_stability_acceptance_status.sh
tests/fixtures/: fresh_acpx_campaign.json  workflow_replay_skill_contract_sample.json
tests/integration/: test_evolution_pipeline.py  test_workspace_run.py
tests/unit/: __init__.py  test_acceptance_calibration_suite.py  test_acceptance_core_calibration.py  test_acceptance_core_disposition.py  test_acceptance_core_imports.py  test_acceptance_core_models.py  test_acceptance_core_routing.py  test_acceptance_linear_filing.py  test_acceptance_models.py  test_acceptance_prompt_composer.py  test_acceptance_protocols.py  test_acceptance_report_normalization.py  test_acceptance_runtime_artifacts.py  test_acceptance_runtime_registry.py  test_acceptance_runtime_runner.py  test_acceptance_runtime_step_executor.py  test_acpx_builder_adapter.py  test_acpx_utils.py  test_acpx_worker_handle.py  test_activity_logger.py  test_admission_governor.py  test_artifact_schemas.py  test_artifact_service.py  test_async_derivation.py  test_atomic_io.py  test_browser_evidence.py  test_bug_taxonomy.py  test_builder_adapter_protocol.py  test_canonical_issue.py  test_cli_preflight.py  test_cli_smoke.py  test_codex_harness_builder_adapter.py  test_command_visual_evaluator.py  test_compliance.py  test_compliance_engine.py  test_conductor.py  (+171 more)
tools/: visual_eval.py
(+1458 files in other folders)
