[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-orch"
version = "0.5.2"
description = "The control plane for spec-driven software delivery — orchestrate AI agents with specs, gates, evidence, and closed-loop evolution."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "fakechris"},
]
keywords = ["ai", "orchestration", "spec", "llm", "devops", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.9",
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
planner = [
  "litellm>=1.60",
]
dashboard = [
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "websockets>=12",
]
slack = [
  "slack-bolt>=1.21",
]
cjk = [
  "jieba>=0.42",
]
memory = [
  "qdrant-client[fastembed]>=1.9",
]
visual = [
  "playwright>=1.52",
]
all = [
  "spec-orch[planner,dashboard,slack,cjk,memory,visual]",
]
dev = [
  "spec-orch[all]",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.9",
  "mypy>=1.14",
  "types-PyYAML>=6.0",
  "build>=1.0",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/fakechris/spec-orch"
Repository = "https://github.com/fakechris/spec-orch"
Documentation = "https://github.com/fakechris/spec-orch#readme"
Issues = "https://github.com/fakechris/spec-orch/issues"
Changelog = "https://github.com/fakechris/spec-orch/releases"

[project.scripts]
spec-orch = "spec_orch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spec_orch = [
  "py.typed",
  "dashboard_assets/static/*.css",
  "dashboard_assets/static/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/spec_orch/cli/*.py" = ["B008"]
"src/spec_orch/services/_archived/*.py" = ["E501", "SIM102"]
"src/spec_orch/services/codex_exec_builder_adapter.py" = ["E501"]
"src/spec_orch/dashboard.py" = ["E501"]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "spec_orch.services._archived.codex_harness_builder_adapter"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["qdrant_client", "qdrant_client.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jieba"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["playwright", "playwright.*"]
ignore_missing_imports = true
